# fastapi_crud

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_jwt.py  locustfile.py  pyproject.toml  token.json
app/: database.py  dependencies.py  main.py
app/core/: config.py  db.py  dependencies.py  hash.py  middleware.py  monitoring.py  redis.py  security.py
app/metrics/: redis_metrics.py
app/models/: comment.py  post.py  user.py
app/repositories/: comment_repository.py  post_repository.py  user_repository.py
app/routers/: auth_router.py  comment_router.py  post_router.py
app/schemas/: comment.py  post.py  user.py
app/services/: comment_service.py  post_service.py  user_service.py
mysql/master/: init.sh
mysql/read1/: init.sh
mysql/read2/: init.sh
nginx/: nginx.conf
prometheus/: prometheus.yml
tests/services/: test_comment_service.py  test_post_service.py  test_user_service.py
