[project]
name = "fastapi-crud"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.10",
    "bcrypt==4.0.0",
    "coverage>=7.12.0",
    "fastapi>=0.119.0",
    "greenlet>=3.2.4",
    "locust>=2.42.5",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
